# gmock-demo

./: CMakeLists.txt  registration_service_test.cpp  test.cpp
